@@ -1,3 +1,14 @@
+2003-03-15  Per Bothner  <per@bothner.com>
+
+	* Symbol.java:  Reduce set of inconsistent 'make' overloadings to one.
+	Previous situation would cause problems when compiling XQuery QNames.
+	(make(String, String)):  Generalize to make(Object, String) - allows
+	first argument to be null, an Environment, or a namespace name.
+	(make(String, Environment)):  Subsumed by above metod, hence removed.
+	(make(Object, String)):  Rename variant that creates an initialized
+	uninterned symbol to makeUninterned to avoid confusion.
+	(writeExternal, readExternal):  Match new 'make' argument order.
+
 2003-03-03  Per Bothner  <per@bothner.com>
 
 	* CallContext.java.in (baseUriDefault):  new static field.
